# AVR_IoT

./: .gitignore  CMakeLists.txt  main.c
lib/conf/: config.h  html.h  macros.h  relays_mod.h
lib/dht22/: dht22.c  dht22.h  dht_config.h
lib/network/: CMakeLists.txt  enc28j60.c  network.h
lib/uart/: CMakeLists.txt  uart.c  uart.h
ui/: package-lock.json
